2002-10-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_get_argv): Setup the import/export
	command-line.
	(gpg_ctx_op_step): Handle import/export errors.
	(gpg_import_keys): Implemented.
	(gpg_export_keys): Implemented.
	(gpg_ctx_op_step): Don't do anything with gpg's stdin unless we
	have something to write to it (exporting keys doesn't require
	writing to gpg's stdin).

2002-10-13  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* gmime-utils.c (g_mime_utils_generate_message_id): New function
	to generate a valid unique message-id string.

2002-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes to make g_mime_message_partial_split_message() use the
	correct token as the id parameter.

	* gmime-object.c (g_mime_object_set_content_id): Same as with
	GMimeMessage::message_id.
	(process_header): Same as process_header for gmime-message.c but
	for content_id.

	* gmime-message.c (process_header): Set only the addr-spec portion
	of the msgid.
	(g_mime_message_set_message_id): Treat the message_id passed in as
	the addr-spec msgid (ie, as if it didn't contain <>'s).

2002-10-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_import_keys): Renamed.
	(gpg_export_keys): Renamed.

	* gmime-cipher-context.c (g_mime_cipher_export_keys): Renamed to
	be friendlier toward c++.
	(g_mime_cipher_import_keys): Renamed to be similarly named with
	the above function.

2002-09-30  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version.

	* Makefile.am: Don't install gmime.m4

	* gmime.m4: Removed.

2002-09-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-charset.c (filter_filter): Rewritten, don't set
	errno to 0 before calling iconv (we can't assume that on success
	errno will not be set?). Also, don't grow the buffer here, save
	any un-converted text in the backup buffer to be converted next
	time through.
	(filter_continue): Pick up the slack of filter_filter by
	converting anything left over.
